--- a/Russell_SB_assets.ipynb
+++ b/Russell_SB_assets.ipynb
@@ -66,33 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "68864847-913c-43b8-be2e-35d6519c4cb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_df_SMA(ticker):\n",
-    "    ticker.drop(['Close','Volume', 'High', 'Low', 'Open'], axis=1, inplace=True)\n",
-    "    ticker.columns = ticker.columns.map(''.join).str.strip('')\n",
-    "    ticker.columns = ticker.columns.str.lstrip(\"Adj Close\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ba392599-6497-421f-9675-37999059153b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_df_momentum(ticker):\n",
-    "    ticker.drop(['Close','Volume', 'High', 'Low', 'Open'], axis=1, inplace=True)\n",
-    "    ticker.columns = ticker.columns.map(''.join).str.strip('')\n",
-    "    ticker.columns = ticker.columns.str.lstrip(\"Adj Close\")\n",
-    "    ticker.columns = column_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "7aa63156-9101-44e8-b56e-a881f00df6e1",
    "metadata": {
     "tags": []
@@ -113,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "4101f3b9-5d58-41b2-846c-fca363d4b6c4",
    "metadata": {
     "tags": []
@@ -155,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e3ae03dd-50b8-4164-bed8-81854f0f439e",
    "metadata": {},
    "outputs": [],
@@ -165,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "393e9ce9-94a1-4c9c-aae4-33e96cd27bdc",
    "metadata": {},
    "outputs": [
@@ -180,14 +153,13 @@
    "source": [
     "#SMA Data\n",
     "#Removes assets that are below thier 168 day or 8 month SMA. \n",
-    "df = yF.download(ticker_s, start=start, end=end)\n",
-    "clean_df_SMA(df)\n",
+    "df = yF.download(ticker_s, start=start, end=end)['Adj Close']\n",
     "SMA_Above(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "9e6d0718-4e5f-44e7-9643-924ed2829228",
    "metadata": {},
    "outputs": [
@@ -210,7 +182,7 @@
        " 'TIP']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "66f0941b-02cb-4f3e-8a3f-e1262cdfbcad",
    "metadata": {},
    "outputs": [],
@@ -231,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "e374bc9d-e00e-4e8b-88d2-7b3f995331b3",
    "metadata": {},
    "outputs": [
@@ -247,8 +219,7 @@
     "#Momentum\n",
     "#Selects the top 5 assets based on momentum and removes assets with momentum <= 0. \n",
     "ticker_s = column_names\n",
-    "df1 = yF.download(ticker_s, start=start, end=end)\n",
-    "clean_df_momentum(df1)\n",
+    "df1 = yF.download(ticker_s, start=start, end=end)['Adj Close']\n",
     "df1 = (df1.pct_change() +1)[1:].resample('M').prod()\n",
     "df1 = df1 - 1\n",
     "get_momentum_multiple(df1)"
@@ -256,22 +227,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1185ad57-e1d4-4340-9625-9688a337ca8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "EFG    10.61\n",
-       "EFA     8.75\n",
-       "GLD     8.61\n",
-       "IWF     8.38\n",
-       "EFV     6.60\n",
+       "EFG    10.67\n",
+       "EFA     8.85\n",
+       "IWF     8.44\n",
+       "GLD     8.31\n",
+       "EFV     6.72\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "a2ac5d48-f17f-4d8f-82b9-3a6049b7ae9f",
    "metadata": {},
    "outputs": [],
